--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <header>
         header
     </header>
+    <div class="slider">
+        <h2>Slide 1</h2>
+        <h2>Slide 2</h2>
+    </div>
 </body>
 </html>
