--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="slider">
         <h2>Slide 1</h2>
         <h2>Slide 2</h2>
+        <h2>Slide 3</h2>
     </div>
     <footer>
         footer
