--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Slide 3</h2>
     </div>
     <footer>
-        footer
+        All right are reserved
     </footer>
 </body>
 </html>
