--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Gallery</li>
+            <li>Product</li>
+        </ul>
+    </nav>
     <header>
         header
     </header>
