--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <ul>
-            <li>Home</li>
-            <li>Gallery</li>
-            <li>Product</li>
-        </ul>
+      <ul>
+        <li>Home</li>
+        <li>Gallery</li>
+      </ul>
     </nav>
-    <header>
-        header
-    </header>
+    <header>header</header>
     <div class="slider">
-        <h2>Slide 1</h2>
-        <h2>Slide 2</h2>
-        <h2>Slide 3</h2>
+      <h2>Slide 1</h2>
+      <h2>Slide 2</h2>
+      <h2>Slide 3</h2>
     </div>
-    <footer>
-        All right are reserved
-    </footer>
-</body>
+    <footer>All right are reserved</footer>
+
+    <script src="script.js"></script>
+  </body>
 </html>
